--- a/helm/ph-ee-engine/templates/connector-ams-mifos.yml
+++ b/helm/ph-ee-engine/templates/connector-ams-mifos.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: ph-ee-connector-ams-mifos
-          image: paymenthubee.azurecr.io/phee/connector-ams-mifos
+          image: us.icr.io/phee-ns/phee-connector-ams
           ports:
             - containerPort: 5000
           env:
