--- a/helm/ph-ee-engine/templates/connector-gsma.yml
+++ b/helm/ph-ee-engine/templates/connector-gsma.yml
@@ -1,29 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "ph-ee-connector-mojaloop-java"
+  name: "ph-ee-connector-gsma"
   labels:
-    app: ph-ee-connector-mojaloop-java
+    app: ph-ee-connector-gsma
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ph-ee-connector-mojaloop-java
+      app: ph-ee-connector-gsma
   template:
     metadata:
       labels:
-        app: ph-ee-connector-mojaloop-java
+        app: ph-ee-connector-gsma
       annotations:
         deployTime: "{{ .Values.deployTime }}"
     spec:
       containers:
-        - name: ph-ee-connector-mojaloop-java
-          image: us.icr.io/phee-ns/ph-ee-mojaloop
+        - name: ph-ee-connector-gsma
+          image: us.icr.io/phee-ns/ph-ee-gsma
           ports:
             - containerPort: 5000
           env:
             - name: "SPRING_PROFILES_ACTIVE"
-              value: "{{ .Values.ph_ee_connector_mojaloop.SPRING_PROFILES_ACTIVE }}"
+              value: "{{ .Values.ph_ee_connector_gsma.SPRING_PROFILES_ACTIVE }}"
           volumeMounts:
             - name: ph-ee-config
               mountPath: "/config"
@@ -37,8 +37,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: ph-ee-connector-mojaloop-java
-  name: ph-ee-connector-mojaloop-java
+    app: ph-ee-connector-gsma
+  name: ph-ee-connector-gsma
   namespace: default
 spec:
   ports:
@@ -47,6 +47,6 @@ spec:
       protocol: TCP
       targetPort: 5000
   selector:
-    app: ph-ee-connector-mojaloop-java
+    app: ph-ee-connector-gsma
   sessionAffinity: None
   type: ClusterIP
