--- a/helm/ph-ee-engine/templates/operations-importer-es.yml
+++ b/helm/ph-ee-engine/templates/operations-importer-es.yml
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
         - name: ph-ee-importer-es
-          image: paymenthubee.azurecr.io/phee/importer-es
+          image: us.icr.io/phee-ns/phee-es-importer
 
 {{- end }}
