--- a/helm/ph-ee-engine/templates/operations-web.yml
+++ b/helm/ph-ee-engine/templates/operations-web.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: ph-ee-operations-web
-          image: paymenthubee.azurecr.io/phee/operations-web
+          image: us.icr.io/phee-ns/ops-web
           ports:
             - containerPort: 4200
           volumeMounts:
