--- a/helm/ph-ee-engine/templates/operations-app.yml
+++ b/helm/ph-ee-engine/templates/operations-app.yml
@@ -67,7 +67,7 @@ kind: Ingress
 metadata:
   name: ph-ee-operations-app
   annotations:
-    kubernetes.io/ingress.class: azure/application-gateway
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - host: "{{ .Values.ph_ee_operations_app.hostname }}"
@@ -83,7 +83,7 @@ kind: Ingress
 metadata:
   name: ph-ee-identity
   annotations:
-    kubernetes.io/ingress.class: azure/application-gateway
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - host: "{{ .Values.ph_ee_identity.hostname }}"
